@@ -966,7 +966,7 @@ public class SearchServiceImpl implements SearchService {
 			searchParameters.setQuery(luceneQuery);
 
 			String facetName = "@" + parameter.getName();
-			List<String> facets = parameter.getFacets() == null ? Arrays.asList(new String[]{facetName}) : parameter.getFacets();
+			List<String> facets = parameter.getFacets() == null ? List.of(facetName) : parameter.getFacets().stream().map(MetadataQueryParameter.MetadataQueryFacet::getValue).collect(Collectors.toList());
 			for(String facet : facets){
 				FieldFacet fieldFacet = new FieldFacet(facet);
 				fieldFacet.setLimit(100);
